[BISERVER-4679] z-index fix for IE

--- a/pentaho-xul-gwt/src/org/pentaho/ui/xul/public/xul.css
+++ b/pentaho-xul-gwt/src/org/pentaho/ui/xul/public/xul.css
@@ -346,7 +346,7 @@ legend {
   opacity: 0.85;
   filter: alpha(opacity=85);
   background-color:#FCCECF;
-  z-index: 1500;
+  z-index: 1500 !important;
 }
 .tree-item-custom-widget-proxy-valid{
   background-color: #D6FCD3;
